--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,137 @@
-<h1 class="text-center">{{title}}</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container px-4 px-lg-5">
+                <div id="userArea"></div>
+
+                <img alt="Brand" width="40px" height="40px" src="favicon.ico">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul  class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                      <a *ngIf="!estaLoggeado()" id="login" class="navbar-brand" routerLink="login" routerLinkActive="active">Identificate</a>
+                      <div *ngIf="estaLoggeado()" class="account d-flex mx-2 flex-column" style="text-align: right;">
+                        {{usernameGuardado()}} <a id="aCloseSession" href="#" (click)="cerrarSesion()">Cerrar sesión</a>
+                        </div>
+                        <li class="nav-item"><a id="init" class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+                        <li class="nav-item"><a id="init" class="nav-link active" aria-current="page" routerLink="mostrar-categoria" routerLinkActive="active">Categorías</a></li>
+                      <li *ngIf="esAdmin()" class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Administración</a>
+                        <ul class="dropdown-menu">
+                          <li><a id="init" class="dropdown-item" aria-current="page" routerLink="productos" routerLinkActive="active" href="#prueba">Gestión de productos</a></li>
+                          <li><a id="init" class="dropdown-item" aria-current="page" routerLink="categorias" routerLinkActive="active">Gestión de categorías</a></li>
+                          <li><a id="init" class="dropdown-item" aria-current="page" routerLink="usuarios" routerLinkActive="active">Gestión de usuarios</a></li>
+                          <li><a id="init" class="dropdown-item" aria-current="page" routerLink="pedidos" routerLinkActive="active">Gestión de pedidos</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                        <button class="btn btn-outline-dark" type="submit" routerLink="shopping-cart" routerLinkActive="active">
+                            <i class="bi-cart-fill me-1"></i>
+                            <span class="badge bg-dark text-white ms-1 rounded-pill" >{{constante.numberCarrito}}</span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!-- Header-->
+        <header class="bg-dark">
+            <div class="container px-1 px-lg-1 my-1">
+                                <!-- Carousel -->
+                <div id="carousel1" class="carousel slide" data-ride="carousel">
+
+
+                    <!-- The slideshow/carousel -->
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="rounded mx-auto d-block" height="667px" src="https://t1.uc.ltmcdn.com/es/posts/2/7/4/u2_52472_6_600.jpg" alt="" >
+                    </div>
+                    <div class="carousel-item">
+                        <img class="rounded mx-auto d-block" src="https://images.unsplash.com/photo-1604514288114-3851479df2f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3J1cG8lMjBkZSUyMHJvY2t8ZW58MHx8MHx8fDA%3D&w=1000&q=80" alt="" >
+                    </div>
+                    <div class="carousel-item">
+                        <img class="rounded mx-auto d-block" height="667px" src="https://imusicarock.com/wp-content/uploads/2015/10/metralla-banda.jpg" alt="">
+                    </div>
+                    </div>
+
+                    <!-- Left and right controls/icons -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    </button>
+
+                    <!-- Indicators/dots -->
+                    <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2"></button>
+                    </div>
+
+                </div>
+
+                <div class="text-center text-white">
+                    <!--<h1 class="display-4 fw-bolder"></h1>
+                    <p class="lead fw-normal text-white-50 mb-0"></p>-->
+
+
+                </div>
+
+            </div>
+        </header>
+        <div id="scrollElement"></div>
+        <main class="container px-4 px-lg-5 mt-5">
+          <router-outlet></router-outlet>
+        </main>
+        <!-- Section-->
+        <section class="py-5">
+            <div class="text-center text-black">
+                <p class="lead fw-normal text-black-100 mb-0"><strong>Destacados</strong></p>
+            </div>
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                      <div class="col mb-5" *ngFor="let pro of productos">
+                        <div class="card h-100">
+                          <!-- Product image-->
+                          <img class="card-img-top" width="400" height="300" src="{{pro.images}}" alt="..." />
+                          <!-- Product details-->
+                          <div class="card-body p-4">
+                              <div class="text-center">
+                                  <!-- Product name-->
+                                  <h5 class="fw-bolder">{{pro.name}}</h5>
+                                  <!-- Product price-->
+                                  {{pro.price}}€
+                              </div>
+                          </div>
+                          <!-- Product actions-->
+                          <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                              <div class="text-center"><a class="btn btn-outline-dark mt-auto" (click)="anadirAlCarrito(pro.id)">Añadir al carrito</a>
+                              </div>
+                          </div>
+                      </div>
+                      </div>
+
+                    </div>
+                </div>
+
+        </section>
+
+        <!-- Footer-->
+        <footer class="copyright py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white"><strong>Copyright &copy; MusicStore.</strong> Todos los derechos reservados</p>
+                <a href="" target=_blank> <p class="m-0 text-center text-white">Condiciones legales</p> </a>
+            </div>
+        </footer>
+
+    </body>
+</html>
